--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 num-format = "0.4.0"
 chrono = "0.4"
+crossbeam-utils = "0.8.10"
 
 [profile.dev]
 overflow-checks = false
