--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 num-format = "0.4.0"
 chrono = "0.4"
 rand = "*"
+vampirc-uci = "0.11"
+simple-websockets = "0.1.4"
 
 [profile.dev]
 overflow-checks = false
