--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,14 @@ chrono = "0.4"
 rand = "*"
 vampirc-uci = "0.11"
 simple-websockets = "0.1.4"
+log = "0.4.17"
+simple-logging = "2.0.2"
 
 [profile.dev]
 overflow-checks = false
 opt-level = 3
 
-[build]
-rustflags = "-C target-cpu=native"
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
