--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ vampirc-uci = "0.11"
 simple-websockets = "0.1.4"
 log = "0.4.17"
 simple-logging = "2.0.2"
+shellexpand = "2.1.0"
 
 [profile.dev]
 overflow-checks = false
