--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rand = "*"
 vampirc-uci = "0.11"
 simple-websockets = "0.1.4"
 log = "0.4.17"
-simple-logging = "2.0.2"
+fern = "0.6.1"
 shellexpand = "2.1.0"
 
 [profile.dev]
