--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1", features = ["full"] }
 futures-util = "0.3.5"
 warp = {version="*", features = ["tls"]}
 tokio-stream = "0.1.9"
+permutation = "0.4.1"
 
 [profile.dev]
 overflow-checks = false
