--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/lib/lib.rs"
 [dependencies]
 rand = "0.8.5"
 chrono = "0.4"
-log = "0.4.17"
+log = { version = "0.4.17", features = ["release_max_level_off"] }
 fern = "0.6.1"
 tokio = { version = "1", features = ["full"] }
 futures-util = "0.3.5"
