--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,11 @@ futures-util = "0.3.5"
 warp = {version="*", features = ["tls"]}
 tokio-stream = "0.1.9"
 permutation = "0.4.1"
+serde = "1.0.198"
+
+[dependencies.rocket]
+version = "0.5.0"
+features = ["json"]
 
 [profile.dev]
 overflow-checks = false
